# nanoworks

./: CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_NOTES.md  dftsolve.py  index.html  index.md  install-script-for-Ubuntu.sh  mdsolve.py  mlsolve.py  pyproject.toml  vaspconverter.py
_sass/: _biscuit.scss
docs/source/: about.rst  conf.py  dftsolve_keywords.rst  index.rst  input_file_keywords.rst  installation.rst  mdsolve_keywords.rst  mlsolve_keywords.rst  usage.rst
examples/: README.md  do_all_examples.sh
examples/ASAP3-Example/: README.md
examples/Al-phonon/: Al-phonon.py  README.md
examples/Bulk-GaAs-noCIF/: README.md  bulk_gaas.py
examples/Bulk-MoS2-vdW/: Bulk_MoS2.cif  MoS2-with-vdW.py  MoS2-wo-vdW.py  README.md
examples/Cr2O-spin/: Cr2O.py  README.md
examples/Graphene-LCAO/: README.md  graphene.py
examples/Graphene-ML/: README.md  graphene8x8.cif  graphene8x8withvacancy.cif  ml_input-pristine.py  ml_input-vacancy.py
examples/Graphene-charged/: README.md  graphene-charged.py  graphene-neutral.py
examples/SOC-WSe2-noCIF/: README.md  WSe2-with-SOC.py  WSe2-wo-SOC.py
examples/Si-2atoms-optical/: README.md  Si-Step1-ground_dos_band.py  Si-Step2-optical-RPA.py  Si-Step3-optical-BSE.py
examples/Si-phonon/: README.md  Si-phonon.py
examples/Si-qe/: README.md
examples/Si-vasp/: README.md
examples/Si-with-HSE/: README.md  Si-with-HSE.py
examples/TiC-elastic-electronic/: README.md  TiC.py  TiC_primitive_geooptimized.cif
examples/ZnO-with-Hubbard/: README.md  ZnO_withHubbard.py  ZnO_woHubbard.py
install_scripts/: install-script-for-Ubuntu.sh
nanoworks/: cli.py  dftsolve.py  localization.py  mdsolve.py  mlsolve.py  qeconverter.py  vaspconverter.py
nanoworks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
nanoworks/locales/: de.py  en.py  fr.py  ja.py  ko.py  ru.py  tr.py  zh.py
