[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nanoworks"]

[project]
name = "nanoworks"
version = "26.2.0"
description = " Nanoworks is a unified, high-level Python interface for conducting DFT, MD and ML calculations"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{name = "Sefer Bora Lisesivdin" }, {name = "Beyza Sarikavak-Lisesivdin"}]

[project.scripts]
dftsolve = "nanoworks.dftsolve:main"
mdsolve = "nanoworks.mdsolve:main"
mlsolve = "nanoworks.mlsolve:main"
qeconverter = "nanoworks.qeconverter:main"
vaspconverter = "nanoworks.vaspconverter:main"
nanoworks = "nanoworks.cli:main"
