[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nanoworks"]

[project]
name = "nanoworks"
version = "26.3.1"
description = " Nanoworks is a unified, high-level Python interface for conducting DFT, MD and ML calculations"
readme = "README.md"
requires-python = ">=3.8" 
license = { text = "MIT" }
authors = [{name = "Sefer Bora Lisesivdin" }, {name = "Beyza Sarikavak-Lisesivdin"}]
dependencies = [
    "ase>=3.22.0",
    "spglib",
    "docutils",
    "elastic",
    "requests",
    "phonopy",
    "pyrapl",
    "pymongo",
    "pandas",
    "setuptools_scm"
]

[project.optional-dependencies]
md = [
    "asap3",
    "kimpy"
]
ml = [
    "torch",
    "mace-torch",
    "chgnet",
    "sevenn"
]
all = [
    "asap3",
    "kimpy",
    "torch",
    "mace-torch",
    "chgnet",
    "sevenn"
]

[project.scripts]
dftsolve = "nanoworks.dftsolve:main"
mdsolve = "nanoworks.mdsolve:main"
mlsolve = "nanoworks.mlsolve:main"
qeconverter = "nanoworks.qeconverter:main"
vaspconverter = "nanoworks.vaspconverter:main"
nanoworks = "nanoworks.cli:main"
